crates/check_cli/tests/snapshots/main_cases_reporter_github/reports_diagnostics_github_lint_command.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b

debugger

let f;
		let f;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
::warning title=lint/correctness/noUnusedImports,file=index.ts,line=1,endLine=1,col=8,endColumn=12::This import is unused.
```

```block
::warning title=lint/correctness/noUnusedImports,file=index.ts,line=2,endLine=2,col=10,endColumn=11::Several of these imports are unused.
```

```block
::warning title=lint/correctness/noUnusedVariables,file=index.ts,line=8,endLine=8,col=5,endColumn=6::This variable f is unused.
```

```block
::warning title=lint/correctness/noUnusedVariables,file=index.ts,line=9,endLine=9,col=7,endColumn=8::This variable f is unused.
```

```block
::warning title=lint/correctness/noUnusedImports,file=main.ts,line=1,endLine=1,col=8,endColumn=12::This import is unused.
```

```block
::warning title=lint/correctness/noUnusedImports,file=main.ts,line=2,endLine=2,col=10,endColumn=11::Several of these imports are unused.
```

```block
::warning title=lint/correctness/noUnusedVariables,file=main.ts,line=8,endLine=8,col=5,endColumn=6::This variable f is unused.
```

```block
::warning title=lint/correctness/noUnusedVariables,file=main.ts,line=9,endLine=9,col=7,endColumn=8::This variable f is unused.
```

```block
::error title=lint/suspicious/noDoubleEquals,file=index.ts,line=4,endLine=4,col=3,endColumn=5::Using == may be unsafe if you are relying on type coercion.
```

```block
::error title=lint/suspicious/noDebugger,file=index.ts,line=6,endLine=6,col=1,endColumn=9::This is an unexpected use of the debugger statement.
```

```block
::error title=lint/suspicious/noImplicitAnyLet,file=index.ts,line=8,endLine=8,col=5,endColumn=6::This variable implicitly has the any type.
```

```block
::error title=lint/suspicious/noImplicitAnyLet,file=index.ts,line=9,endLine=9,col=7,endColumn=8::This variable implicitly has the any type.
```

```block
::error title=lint/suspicious/noRedeclare,file=index.ts,line=2,endLine=2,col=10,endColumn=11::Shouldn't redeclare 'z'. Consider to delete it or rename it.
```

```block
::error title=lint/suspicious/noRedeclare,file=index.ts,line=9,endLine=9,col=7,endColumn=8::Shouldn't redeclare 'f'. Consider to delete it or rename it.
```

```block
::error title=lint/suspicious/noDoubleEquals,file=main.ts,line=4,endLine=4,col=3,endColumn=5::Using == may be unsafe if you are relying on type coercion.
```

```block
::error title=lint/suspicious/noDebugger,file=main.ts,line=6,endLine=6,col=1,endColumn=9::This is an unexpected use of the debugger statement.
```

```block
::error title=lint/suspicious/noImplicitAnyLet,file=main.ts,line=8,endLine=8,col=5,endColumn=6::This variable implicitly has the any type.
```

```block
::error title=lint/suspicious/noImplicitAnyLet,file=main.ts,line=9,endLine=9,col=7,endColumn=8::This variable implicitly has the any type.
```

```block
::error title=lint/suspicious/noRedeclare,file=main.ts,line=2,endLine=2,col=10,endColumn=11::Shouldn't redeclare 'z'. Consider to delete it or rename it.
```

```block
::error title=lint/suspicious/noRedeclare,file=main.ts,line=9,endLine=9,col=7,endColumn=8::Shouldn't redeclare 'f'. Consider to delete it or rename it.
```
